fix: image ui in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,47 +14,47 @@ body {
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 210 12% 16%;
+    --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
-    --card-foreground: 210 12% 16%;
+    --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
-    --popover-foreground: 210 12% 16%;
-    --primary: 212 92% 45%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 210 24% 93%;
-    --secondary-foreground: 210 12% 16%;
-    --muted: 210 24% 93%;
-    --muted-foreground: 215 14% 45%;
-    --accent: 210 24% 93%;
-    --accent-foreground: 210 12% 16%;
-    --destructive: 0 72% 51%;
-    --destructive-foreground: 0 0% 100%;
-    --border: 210 24% 87%;
-    --input: 210 24% 87%;
-    --ring: 212 92% 45%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 215 14% 10%;
-    --foreground: 210 14% 89%;
-    --card: 215 14% 10%;
-    --card-foreground: 210 14% 89%;
-    --popover: 215 14% 10%;
-    --popover-foreground: 210 14% 89%;
-    --primary: 212 92% 45%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 215 14% 17%;
-    --secondary-foreground: 210 14% 89%;
-    --muted: 215 14% 17%;
-    --muted-foreground: 217 14% 65%;
-    --accent: 215 14% 17%;
-    --accent-foreground: 210 14% 89%;
-    --destructive: 0 72% 51%;
-    --destructive-foreground: 0 0% 100%;
-    --border: 215 14% 17%;
-    --input: 215 14% 17%;
-    --ring: 212 92% 45%;
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
 }
 
